# DataMiningFotballEvents

./: .dir-locals.el  .gitignore  CMakeLists.txt  README.md  README.txt
include/: BettingModels.h  Event.h  GetFutures.h  ParseEvents.h  UniqueTeam.h  WriteDataToFiles.h
src/: BettingModels.cpp  GetFutures.cpp  ParseEvents.cpp  WriteDataToFiles.cpp  main.cpp
